--- a/projects/swipe-angular-list-rtl/tsconfig.lib.prod.json
+++ b/projects/swipe-angular-list-rtl/tsconfig.lib.prod.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "./tsconfig.lib.json",
   "compilerOptions": {
     "outDir": "../../out-tsc/lib",
     "target": "es2015",
@@ -12,11 +12,8 @@
     ]
   },
   "angularCompilerOptions": {
-    "extends": "../tsconfig.lib.json",
-    "angularCompilerOptions": {
-      "compilationMode": "partial",
-      "enableIvy": false
-    }
+    "compilationMode": "partial",
+    "enableIvy": false
   },
   "exclude": [
     "src/test.ts",
