--- a/projects/swipe-angular-list-rtl/package.json
+++ b/projects/swipe-angular-list-rtl/package.json
@@ -2,8 +2,8 @@
   "name": "swipe-angular-list-rtl-2",
   "version": "1.0.9",
   "peerDependencies": {
-    "@angular/common": "^8.2.0",
-    "@angular/core": "^8.2.0",
+    "@angular/common": "14.2.2",
+    "@angular/core": "14.2.2",
     "hammerjs": "^2.0.8"
   },
   "scripts": {
