--- a/projects/swipe-angular-list-rtl/package.json
+++ b/projects/swipe-angular-list-rtl/package.json
@@ -1,9 +1,9 @@
 {
   "name": "swipe-angular-list-rtl-2",
-  "version": "1.0.9",
+  "version": "1.0.12",
   "peerDependencies": {
-    "@angular/common": "14.2.2",
-    "@angular/core": "14.2.2",
+    "@angular/common": "^14.2.2",
+    "@angular/core": "^14.2.2",
     "hammerjs": "^2.0.8"
   },
   "scripts": {
@@ -21,7 +21,8 @@
     "swiper",
     "task",
     "list"
-  ],  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 10.2.4.",
+  ],
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 10.2.4.",
   "main": "karma.conf.js",
   "repository": {
     "type": "git",
